2012-08-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14420
	* gas/elf/dwarf2-1.d: Updated.
	* gas/elf/dwarf2-2.d: Likwise.
	* gas/i386/dw2-compress-1.d: Likwise.

2012-08-01  James Lemke  <jwlemke@codesourcery.com>

	* gas/cfi/cfi-ppc-1.d: Allow for code alignment of 2 or 4.

2012-07-31  Catherine Moore  <clm@codesourcery.com>
	    Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/micromips@mips32-dsp.d: New test.
	* gas/mips/micromips@mips32-dspr2.d: New test.
	* gas/mips/mips32-dsp.d: Remove -mips32r2.
	* gas/mips/mips32-dspr2.d: Likewise.
	* gas/mips/mips32-dsp.s: Update padding.
	* gas/mips/mips32-dspr2.s: Likewise.
	* gas/mips/mips.exp: Use run_dump_test_arches to run MIPS32 DSP
	tests.

2012-07-31  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/d30v/bittest.l: Updated.

2012-07-31  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/rdseed-intel.d: Append "#pass".

2012-07-30  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/inval-equ-2.l: Updated.

2012-07-27  Sean Keys  <skeys@ipdatasys.com>

	* gas/xgate/xgate.exp: Added hi/lo test.
	* gas/xgate/hilo.d: New test file
	* gas/xgate/hilo.s: Net test source file.

2012-07-24  Sandra Loosemore  <sandra@codesourcery.com>
	    Jie Zhang  <jzhang918@gmail.com>

	* gas/arm/adr.d: New test.
	* gas/arm/adr.s: New test.

2012-07-16  Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* gas/i386/i386.exp: Run adx, rdseed and prefetchw tests.
	* gas/i386/x86-64-arch-2.s: Use prefetchw as 3dnow and Prfchw tests.
	* gas/i386/arch-10.s: Likewise.
	* gas/i386/arch-10-1.l: Changed correspondingly.
	* gas/i386/arch-10-2.l: Likewise.
	* gas/i386/arch-10-3.l: Likewise.
	* gas/i386/arch-10-4.l: Likewise.
	* gas/i386/arch-10.d: Likewise.
	* gas/i386/arch-10-lzcnt.d: Likewise.
	* gas/i386/x86-64-arch-2.d: Likewise.
	* gas/i386/x86-64-arch-2-lzcnt.d: Likewise.
	* gas/i386/ilp32/x86-64-arch-2.d: Likewise.
	* gas/i386/arch-10-prefetchw.d: New file.
	* gas/i386/x86-64-arch-2-prefetchw.d: Likewise.
	* gas/i386/rdseed.s: Likewise.