@@ -1,3 +1,13 @@
+2012-08-03  Roland McGrath  <mcgrathr@google.com>
+
+	* gas/i386/x86-64-stack.s (try): Also try just rex.W (0x48) prefix.
+	* gas/testsuite/gas/i386/ilp32/x86-64-stack-intel.d: Updated.
+	* gas/testsuite/gas/i386/ilp32/x86-64-stack-suffix.d: Updated.
+	* gas/testsuite/gas/i386/ilp32/x86-64-stack.d: Updated.
+	* gas/testsuite/gas/i386/x86-64-stack-intel.d: Updated.
+	* gas/testsuite/gas/i386/x86-64-stack-suffix.d: Updated.
+	* gas/testsuite/gas/i386/x86-64-stack.d: Updated.
+
 2012-08-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR binutils/14420
